# HK242_EE3077_L01_Artifical_Intelligence

./: HW1.py  HW2.py  HW3.py  HW4.py  HW5.py  README.md  test.py  test1.py
Bai2-3-4(KNN)/: data.xlsx  knn.asv  knn.m
Bai6/: CMakeLists.txt  main.cpp  readme.md
Bai6/Debug/: Q_LEARNING.lib  Q_Matrix_After_Training.csv
Bai6/Q_LEARNING/: CMakeLists.txt  q_learning.cpp  q_learning.h
Bài_1/: hw1.py  perceptron.py
